# SocialJAM

./: README.md  requirements.txt
backend/: database.db  main.py  pyproject.toml  test.db
backend/app/: database.py  models.py  schemas.py
backend/app/api/: routes_album.py  routes_artist.py  routes_user.py
backend/app/core/: mongo.py  security.py
backend/app/repositories/: posts_repository.py
backend/tests/: README.md  __init__.py  conftest.py  database.db  test_album.py  test_artist.py  test_post.py  test_user.py
front/: README.md  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
front/src/: App.jsx  api.js  main.jsx
front/src/_auth/: AuthLayout.jsx
front/src/_auth/forms/: SigninForms.jsx  SignupForms.jsx
front/src/_root/: RootLayout.jsx
front/src/_testes/forms/: SignupForms.test.jsx
front/src/componentes/: AddTask.jsx  Tasks.jsx
front/src/components/shared/: Loader.jsx
front/src/lib/validation/: index.js
front/src/pages/: TasksPage.jsx
front/src/test/: setup.js
