[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[all]>=0.116.1",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pymongo>=4.15.1",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
]
